--- a/app/web/view/index/index.html
+++ b/app/web/view/index/index.html
@@ -40,6 +40,7 @@
     <button class="btn-talk" type="submit" >回复</button>
     <button class="btn-rand-food" type="submit" >吃饭</button>
     <p class="t-sub"></p>
+    <p class="t-sub-fenge">我是可爱的分割线</p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="/js/jquery-3.3.1.min.js" type="text/javascript"></script>
